# parcode

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  parcode-upd.txt  parcode.txt  whitepaper.md
.axes/: axes.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: lazy_bench.rs  map_access.rs  performance.rs
examples/: audit.rs  bench_sync.rs  inspect_debug.rs  lazy_collection_test.rs  lazy_loading.rs  lazy_loading_comparison.rs  lazy_map_test.rs  map_benchmark.rs  memory_buffer.rs  memory_test.rs
parcode-derive/: Cargo.toml  README.md
parcode-derive/src/: lib.rs
src/: api.rs  compression.rs  error.rs  executor.rs  format.rs  inspector.rs  io.rs  lib.rs  map.rs  reader.rs  rt.rs  visitor.rs  visitor_impls.rs
src/graph/: core.rs  id.rs  job.rs  mod.rs
tests/: api_test.rs  integration_tests.rs  lazy_iterator_tests.rs  lazy_tests.rs  macro_test.rs  map_test.rs  miri_test.rs
